[package]
name = "bloom_filter_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "1.6.2"
rand = "0.8.5"
uuid =  { version = "0.8.2", features = ["v4"],  default-features = false  }
